--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Charity Fundraising Plugin Demo</h1>
   <section class="campaign">
-    <h2>Save the School Library</h2>
+    <h2>Donate for a better world!</h2>
     <p>Goal: ₹50,000 | Raised: ₹32,400</p>
     <div class="progress-bar">
       <div class="bar" style="width: 64.8%"></div>
@@ -21,3 +21,4 @@
   </footer>
 </body>
 </html>
+
