--- a/index.html
+++ b/index.html
@@ -1,24 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Charity Fundraising Demo</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Uplift Foundation</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Charity Fundraising Plugin Demo</h1>
-  <section class="campaign">
-    <h2>Donate for a better world!</h2>
-    <p>Goal: ₹50,000 | Raised: ₹32,400</p>
-    <div class="progress-bar">
-      <div class="bar" style="width: 64.8%"></div>
+
+  <header class="hero-banner">
+    <h1>Uplift Foundation</h1>
+    <p>Empowering communities through education, health, and sustainability.</p>
+  </header>
+
+  <nav class="main-nav">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Donate</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section class="highlights">
+    <div class="highlight-box">
+      <h2>Education</h2>
+      <p>Providing access to quality learning resources.</p>
     </div>
-    <button>Donate Now</button>
+    <div class="highlight-box">
+      <h2>Healthcare</h2>
+      <p>Supporting wellness initiatives in rural areas.</p>
+    </div>
+    <div class="highlight-box">
+      <h2>Environment</h2>
+      <p>Promoting sustainable practices and awareness.</p>
+    </div>
   </section>
-  <footer>
-    <p>Powered by WordPress Plugin • Designed by Varshaa</p>
+
+  <footer class="site-footer">
+    <p>© 2025 Uplift Foundation</p>
+    <div class="social-icons">
+      <a href="#">Facebook</a> |
+      <a href="#">Instagram</a> |
+      <a href="#">LinkedIn</a>
+    </div>
+    <p>Email: contact@uplift.org | Phone: +91-9876543210</p>
   </footer>
+
 </body>
 </html>
-
